@@ -261,13 +261,13 @@ function array_to_sql_or($array, $sql_column) {
 	}
 
 	if (count($array) > 0) {
-		$sql_or = "(";
+		$sql_or = "($sql_column IN(";
 
 		for ($i=0;($i<count($array));$i++) {
-			$sql_or .= $sql_column . "='" . $array[$i] . "'";
-
-			if (($i+1) < count($array)) {
-				$sql_or .= " OR ";
+			if (is_int($array[$i])) {
+				$sql_or .= ($i == 0) ? "":"," . $array[$i];
+			}else{
+				$sql_or .= ($i == 0) ? "'":",'" . $array[$i] . "'";
 			}
 		}
 
